# packages/core/lib/v3/api.ts
@@ -208,6 +208,7 @@ export class StagehandAPIClient {
     verbose,
     systemPrompt,
     selfHeal,
+    humanBehavior,
     browserbaseSessionCreateParams,
     browserbaseSessionID,
     // browser,  TODO for local browsers
@@ -234,6 +235,7 @@ export class StagehandAPIClient {
       verbose,
       systemPrompt,
       selfHeal,
+      humanBehavior,
       browserbaseSessionCreateParams,
       browserbaseSessionID,
       // browser, TODO: only send when connected to local fastify
